grid top space on safari fix

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -85,6 +85,7 @@
   -ms-column-break-inside: avoid;
   column-break-inside: avoid;
   page-break-inside: avoid;
+  display: inline-block;
 }
 .project-card__wrapper:hover {
   -webkit-transform: scale(1.05);
